--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body {
     font-family: Fjalla One, Static;
 }
 
-h1, h2, h5 {
+h1,
+h2,
+h5 {
     color: var(--cor-secundaria);
     font-weight: 700;
 }
@@ -20,5 +22,13 @@ footer a {
 }
 
 footer a:hover {
+    color: var(--cor-destaque);
+}
+
+a, .btn-link:hover {
+    color: var(--cor-principal)
+}
+
+a:hover{
     color: var(--cor-destaque);
 }
